--- a/src/index.css
+++ b/src/index.css
@@ -1,36 +1,36 @@
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 
 body {
-  font-family: 'Courier New', Courier, monospace;
-  background-color: #000;
-  color: #0f0;
   margin: 0;
-  padding: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.App {
-  text-align: center;
-  width: 100%;
+  font-family: 'VT323', 'Courier New', Courier, monospace;
+  -webkit-font-smoothing: none;
+  -moz-osx-font-smoothing: none;
+  background-color: #000;
+  color: #33ff33;
 }
 
 .game-interface {
-  width: 80%;
-  max-width: 800px;
-  margin: 0 auto;
-  background-color: #111;
   padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 20px #0f0;
+  font-size: 18px;
+  line-height: 1.2;
+  white-space: pre-wrap;
 }
 
-.game-log {
-  height: 300px;
-  overflow-y: auto;
-  margin-bottom: 10px;
-  border: 1px solid #0f0;
-  padding: 10px;
-  background-color: #000;
+.input-line {
+  display: flex;
+  margin-top: 20px;
+}
+
+.prompt {
+  margin-right: 8px;
+}
+
+.command-input {
+  flex-grow: 1;
+  background: transparent;
+  border: none;
+  color: #33ff33;
+  font-family: 'VT323', 'Courier New', Courier, monospace;
+  font-size: 18px;
+  outline: none;
 }
