--- a/src/components/GameInterface.css
+++ b/src/components/GameInterface.css
@@ -20,6 +20,8 @@ body {
     flex-direction: column;
     box-sizing: border-box;
     background-color: #000000;
+    font-size: 24px;
+    line-height: 1.3;
 }
 
 /* Add fixed green borders */
