--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   -moz-osx-font-smoothing: none;
   background-color: #000;
   color: #33ff33;
-  font-size: 32px;
+  font-size: 24px;
 }
 
 .game-interface {
@@ -18,13 +18,27 @@ body {
   margin: 0 auto;
 }
 
+/* Target the game log and its paragraphs */
+.game-log {
+  font-size: 24px !important;
+}
+
+.game-log p {
+  font-size: 24px !important;
+  margin: 0;  /* Remove default paragraph margins */
+  padding: 0;  /* Remove default paragraph padding */
+  line-height: 1.4;
+}
+
 .input-line {
   display: flex;
   margin-top: 30px;
+  font-size: 24px;
 }
 
 .prompt {
   margin-right: 12px;
+  font-size: 24px;
 }
 
 .command-input {
@@ -33,6 +47,6 @@ body {
   border: none;
   color: #33ff33;
   font-family: 'VT323', 'Courier New', Courier, monospace;
-  font-size: 32px;
+  font-size: 24px;
   outline: none;
 }
